fix- remove header logo form header list because header should be at left and list should be in right

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
     <div class="hero">
       <header>
+        <h1>
+            Header logo</h1>
         <ul>
-            <LI>Header logo</LI>
             <li>
             <a href="#">Blog </a>
             </li>
@@ -40,19 +41,19 @@
             <ul>
                 <li>
                     <img src="img/computershop.jpg" alt="img1" height="200px" width="200px">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
+                  <br>  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
                 </li>
                 <li>
                     <img src="img/computershop.jpg" alt="img1" height="200px" width="200px">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
+                  <br>  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
                 </li>
                 <li>
                     <img src="img/computershop.jpg" alt="img1" height="200px" width="200px">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
+                   <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
                 </li>
                 <li>
                     <img src="img/computershop.jpg" alt="img1" height="200px" width="200px">
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
+                   <br> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo, nisi minima 
                 </li>
                 
             </ul>
