fix - remove inline height and width form image line 33 to use css for that

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button>sign up</button>
         </div>
         <div class="header-photo">
-            <img src="./img/computershop.jpg" alt="photo of computer shop sale" height="300px" width="300px">
+            <img src="./img/computershop.jpg" alt="photo of computer shop sale" >
 
         </div>
       </div>
