upadte- remove clearfix class because it didn't fix the padding and margin effect

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
      <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <div class="clearfix">
     <div class="hero">
       <header>
         <h1>
@@ -71,6 +72,7 @@
 </div>
 <button> signup</button>
     </div>
+</div>
     <footer>
         copyright &#169; Rabi Khadka 2024
     </footer>
