--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2>Product details</h2>
       <div class="img-details">
         <ul>
-          <li>
+          <li><div class="golo">
             <img
               src="img/computershop.jpg"
               alt="img1"
@@ -47,9 +47,9 @@
             />
             <br />
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo,
-            nisi minima
+            nisi minima</div>
           </li>
-          <li>
+          <li><div class="golo">
             <img
               src="img/computershop.jpg"
               alt="img1"
@@ -57,19 +57,19 @@
             />
             <br />
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo,
-            nisi minima
+            nisi minima</div>
           </li>
-          <li>
-            <img
+          <li><div class="golo">
+            <img 
               src="img/computershop.jpg"
               alt="img1"
              
             />
             <br />
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo,
-            nisi minima
+            nisi minima</div>
           </li>
-          <li>
+          <li><div class="golo">
             <img
               src="img/computershop.jpg"
               alt="img1"
@@ -77,7 +77,7 @@
             />
             <br />
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo,
-            nisi minima
+            nisi minima</div>
           </li>
         </ul>
       </div>
@@ -87,7 +87,7 @@
         "Purchasing this computer was the best decision I've made. It's fast,
         reliable, and perfect for all my needs!"
       </p>
-      <p>-Kp oli</p>
+      <p>-Kp oli</p></div>
     </div>
     <div class="sign_up">
       <div class="text">
