completion of landing page still room to improve

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       </header>
       <div class="container">
         <div class="saying">
-          <h1>This is awesome website</h1>
+          <h2>This is awesome website</h2>
           <p>
             this is a gaming page website. Our main services are buying selling
             and exchange games.
@@ -36,7 +36,7 @@
       </div>
     </div>
     <div class="more-information">
-      <h2>Product details</h2>
+      <h3>Product details</h3>
       <div class="img-details">
         
         <div class="golo">
@@ -86,7 +86,7 @@
         "Purchasing this computer was the best decision I've made. It's fast,
         reliable, and perfect for all my needs!"
       </p>
-      <p>-Kp oli</p></div>
+      <span class="oli">-Chatgpt 4</span></div>
     </div>
     <div class="sign_up">
       <div class="text">
